# xai_lightningprocesses

./: .gitignore  CITATION.cff  LICENSE  README.md  analyse_diurnal_cycles.py  analyse_shap_and_features.ipynb  analyse_shap_paper.ipynb  ccc.py  environment.yml  etl.py  flash_case_study_final.ipynb  pyproject.toml  reference_model.R  reference_test.py  reference_valpred.R  stats.py  stats_flash.py  test.py  test_shap.py  train.py  utils.py  utils_plots.py  utils_shap.py  utils_subdomains.py  utils_ui.py  validation_scores.py
data-preprocessing/: README_preprocessing.md  cds_retrival_ml.py  cds_retrival_sfc.py  compute_vert_coords.py  levDef.csv  merge_geotiffs.py
resources/: era5_altitudes.csv
