[project]
name = "mlvapto"
version = "0.0.0"
description = ""
authors = [
    {name = "Gregor Ehrensperger", email = "gregor.ehrensperger@datalabhell.at"},
]
dependencies = [
    "numpy>=1.25.2",
    "shap>=0.43.0",
    "torch>=2.1.0",
    "datetime>=5.2",
    "dask>=2023.9.3",
    "pandas>=2.1.0",
    "xarray>=2023.9.0",
    "scikit-learn>=1.3.1",
    "pyspark>=3.5.0",
    "imageio>=2.31.5",
    "cartopy>=0.22.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "petastorm>=0.12.1",
    "inquirer>=3.1.3",
    "jupyterlab>=4.0.6",
    "ipython>=8.16.1",
    "gitpython>=3.1.37",
    "ipywidgets>=8.1.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

